--- a/src/template/styles/css/responsive.css
+++ b/src/template/styles/css/responsive.css
@@ -7,7 +7,9 @@
     .header__logo {
       width: 110px; }
     .header__content {
-      padding-left: 25px; }
+      padding-left: 25px;
+      width: -webkit-calc(100% - 110px);
+      width: calc(100% - 110px); }
   .nav {
     height: 44px; }
     .nav__list a {
@@ -84,6 +86,8 @@
     margin-left: 0; }
   .product_vertical .product__prices {
     margin-bottom: 0; }
+  .product_card .product__content {
+    padding-right: 0; }
   .often__list {
     margin-left: -7px;
     margin-right: -7px;
@@ -161,9 +165,13 @@
     padding-left: 0; }
   .page__title {
     margin-bottom: 20px; }
+    .page__title_pt {
+      padding-top: 0; }
   .page__breadcrumbs {
     padding-top: 0;
     margin-bottom: 17px; }
+  .contacts {
+    padding-top: 0; }
   .footer__left {
     width: 70%; }
   .footer__right {
@@ -335,19 +343,19 @@
   .product {
     width: 235px; }
     .product__img {
-      width: 100%;
-      height: 215px;
+      width: 100% !important;
+      height: 215px !important;
       min-height: 1px; }
     .product__content {
-      width: 100%;
-      padding: 15px 15px 20px; }
+      width: 100% !important;
+      padding: 15px 15px 20px !important; }
     .product__labels {
       display: block; }
     .product__name {
       font-size: 16px;
       line-height: 20px;
       padding-right: 0;
-      margin-bottom: 14px; }
+      margin-bottom: 14px !important; }
     .product__data {
       margin-bottom: 17px; }
       .product__data dt {
@@ -373,13 +381,30 @@
         line-height: 18px; }
       .product .price__old {
         display: none; }
+    .product_card {
+      width: 100%; }
+  .product_card .product__content {
+    padding-left: 0 !important;
+    padding-right: 0 !important; }
+  .product_card .product__name, .product_card .product__data {
+    margin-left: 0; }
+  .product_card .product__buy {
+    padding: 0;
+    background: none; }
   .page__title {
     text-align: center;
     margin-bottom: 15px; }
   .page__wrap {
     padding-top: 30px;
-    padding-bottom: 0; }
+    padding-bottom: 35px; }
+  .products__title {
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    margin-bottom: 15px; }
   .text h2 {
+    font-size: 24px;
+    line-height: 30px;
     margin-top: 30px;
     margin-bottom: 15px; }
   .text ul.ul-table {
@@ -393,6 +418,10 @@
         margin-bottom: 0; }
       .text ul.ul-table li:before {
         display: inline; }
+  .text .dl dl dt, .text .dl dl dd {
+    width: 100%; }
+  .text .dl dl dt:before {
+    display: none; }
   .often__list {
     margin-left: -5px;
     margin-right: -5px;
@@ -408,11 +437,38 @@
     margin-bottom: 15px; }
     .services__item {
       width: 50%; }
-  .advantages__item {
-    width: 100%;
-    margin-bottom: 20px; }
-    .advantages__item:last-of-type {
-      margin-bottom: 0; }
+  .advantages {
+    margin-top: 25px; }
+    .advantages__item {
+      width: 100%;
+      margin-bottom: 20px; }
+      .advantages__item:last-of-type {
+        margin-bottom: 0; }
+  .card__advantages {
+    margin-top: 10px;
+    margin-bottom: 25px; }
+  .card__tabs {
+    margin-bottom: 0; }
+  .tabs__nav li {
+    width: 100%; }
+  .tabs__list {
+    padding: 20px 15px 10px; }
+  .nav-block__title {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
   .footer__nav {
     display: none; }
   .footer__left, .footer__right {
