--- a/src/template/styles/sass/responsive.sass
+++ b/src/template/styles/sass/responsive.sass
@@ -10,6 +10,7 @@
 			width: 110px
 		&__content
 			padding-left: 25px
+			width: calc(100% - 110px)
 	
 
 	.nav
@@ -87,6 +88,11 @@
 			.product
 				&__prices
 					margin-bottom: 0
+
+		&_card
+			.product
+				&__content
+					padding-right: 0
 
 	.often
 		&__list
@@ -190,6 +196,8 @@
 	.page
 		&__title
 			margin-bottom: 20px
+			&_pt
+				padding-top: 0
 		&__breadcrumbs
 			padding-top: 0
 			margin-bottom: 17px
@@ -197,6 +205,8 @@
 
 	.services
 
+	.contacts
+		padding-top: 0
 
 	.footer
 		&__left
@@ -370,12 +380,12 @@
 	.product
 		width: 235px
 		&__img
-			width: 100%
-			height: 215px
+			width: 100% !important
+			height: 215px !important
 			min-height: 1px
 		&__content
-			width: 100%
-			padding: 15px 15px 20px
+			width: 100% !important
+			padding: 15px 15px 20px !important
 
 		&__labels
 			display: block
@@ -384,7 +394,7 @@
 			font-size: 16px
 			line-height: 20px
 			padding-right: 0
-			margin-bottom: 14px
+			margin-bottom: 14px !important
 		&__data
 			margin-bottom: 17px
 			dt
@@ -408,6 +418,20 @@
 					line-height: 18px
 			&__old
 				display: none
+
+		&_card
+			width: 100%
+
+	.product_card .product__content
+		padding-left: 0 !important
+		padding-right: 0 !important
+
+	.product_card .product__name, .product_card .product__data
+		margin-left: 0
+
+	.product_card .product__buy
+		padding: 0
+		background: none
 	
 	.page
 		&__title
@@ -415,10 +439,18 @@
 			margin-bottom: 15px
 		&__wrap
 			padding-top: 30px
-			padding-bottom: 0
+			padding-bottom: 35px
+
+	.products__title
+		font-size: 30px
+		line-height: 34px
+		text-align: center
+		margin-bottom: 15px
 
 	.text
 		h2
+			font-size: 24px
+			line-height: 30px
 			margin-top: 30px
 			margin-bottom: 15px
 		ul
@@ -433,6 +465,13 @@
 						margin-bottom: 0
 					&:before
 						display: inline
+		.dl
+			dl
+				dt, dd
+					width: 100%
+				dt
+					&:before
+						display: none
 
 	.often
 		&__list
@@ -456,11 +495,35 @@
 			width: 50%
 
 	.advantages
+		margin-top: 25px
 		&__item
 			width: 100%
 			margin-bottom: 20px
 			&:last-of-type
 				margin-bottom: 0
+
+
+	.card
+		&__advantages
+			margin-top: 10px
+			margin-bottom: 25px
+
+		&__tabs
+			margin-bottom: 0
+
+	.tabs
+		&__nav
+			li
+				width: 100%
+		&__list
+			padding: 20px 15px 10px
+
+	.nav-block
+		&__title
+			display: flex
+			flex-wrap: wrap
+			align-items: center
+			justify-content: space-between
 	.footer
 		&__nav
 			display: none
