--- a/src/template/styles/sass/responsive.sass
+++ b/src/template/styles/sass/responsive.sass
@@ -207,7 +207,9 @@
 
 	.contacts
 		padding-top: 0
-
+	.page_main .page__wrap
+		padding-top: 30px
+		padding-bottom: 10px
 	.footer
 		&__left
 			width: 70%
