--- a/src/template/styles/sass/style.sass
+++ b/src/template/styles/sass/style.sass
@@ -310,6 +310,11 @@ input, .btn, .slick-slide, textarea
 		margin-bottom: 40px
 		&_pt
 			padding-top: 40px
+	&_main
+		.page
+			&__wrap
+				padding-top: 90px
+				border-top: none
 
 
 
@@ -838,7 +843,7 @@ input, .btn, .slick-slide, textarea
 		margin-bottom: 30px
 
 .about
-	padding-top: 75px
+	padding-top: 20px
 	padding-bottom: 90px
 	&__title
 		text-align: center
