--- a/src/template/styles/sass/style.sass
+++ b/src/template/styles/sass/style.sass
@@ -514,6 +514,7 @@ input, .btn, .slick-slide, textarea
 		display: block
 		background-repeat: no-repeat
 		background-size: cover
+		background-position: center
 	&__content
 		width: calc(100% - 255px)
 		background-color: #fff
